# create

./: .gitignore  .npmignore  .oxlintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: _build.yml  _check-npm-version.yml  _install.yml  _publish.yml  _tag-release.yml  _test-engine.yml  _test.yml  ci.yml  publish.yml
python/: pyproject.toml
python/generate/: __init__.py  __main__.py  collector.py  deriver.py  globals.py  helpers.py  ir.py  orphans.py  xpath_parser.py  xsi_type.py
python/generate/emitters/: __init__.py  constants.py  definition.py  ts_helpers.py  types.py
python/generate/extractors/: __init__.py  attributes.py  children.py  constraints.py  docs.py  facets.py  namespace.py
python/tests/: __init__.py  test_collector.py  test_deriver.py  test_emitters.py  test_extractors.py  test_globals.py  test_helpers.py  test_orphans.py  test_xpath_parser.py
scripts/: smoke.mjs  vendor-wheels.mjs
src/cli/: index.ts  paths.ts  pyodide-runner.ts  scaffold.ts
templates/dialecte/: README.md  _gitignore  package.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
templates/dialecte/.github/workflows/: deploy-docs.yml  publish.yml
templates/dialecte/docs/: index.md
templates/dialecte/docs/.vitepress/: config.ts
templates/dialecte/src/: index.ts
templates/dialecte/src/__version__/: dialecte.ts
templates/dialecte/src/__version__/config/: dialecte.config.ts  hydrated.types.ts  namespaces.ts
test/fixtures/: minimal.xsd
(+3 files in other folders)
